# rmwrs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  config_test.conf  config_test.json  config_test.toml  rmwrsrc.example
.github/workflows/: rust.yml
src/: config.rs  lib.rs  libgen.rs  main.rs  trashinfo.rs  utils.rs
tests/: bin_test.conf  bin_test_invalid.conf  filename_parsing.rs  rmw_utils.rs  test.sh
