[package]
name = "rmwrs"
version = "0.1.0-dev"
authors = ["andy5995 <andy400-dev@yahoo.com>", "James Sherratt"]
edition = "2018"
description = "Rust port of rmw, a safe-remove utility for the command line"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/theimpossibleastronaut/rmwrs"
repository = "https://github.com/theimpossibleastronaut/rmwrs"
readme = "README.md"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
home = "0.5.3"
chrono = "0.4"
configster = "0.1.1"
